workloads/dektFitness/kubernetes-manifests/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scg-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
  - host: acme.tanzu.dekt.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gateway-acme
            port:
              number: 80
# networking.k8s.io/v1beta1 Ingress is deprecated in v1.19+, unavailable in v1.22+
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: scg-ingress
# spec:
#   rules:
#     - host: gateway-acme.spring.animalrescue.online
#       http:
#         paths:
#           - backend:
#               serviceName: gateway-acme
#               servicePort: 80
